<resources>
    <string name="app_name">My Travel</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>

    <string name="text_home">Creer un voyage</string>
    <string name="text_notifications">page d acceuil</string>
    <string name="text_search">chercher un voyage</string>

    <string name="menu_notifications">Creer un voyage</string>
    <string name="menu_home">Home</string>
    <string name="menu_search">chercher un voyage</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>

    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>


    <string name="alert_date">Selectionner une Date</string>
    <string name="hint_date">From</string>
    <string name="hint_date2">To</string>

    <string name="facebook_app_id">140779416643943</string>
    <string name="fb_login_protocol_scheme">fb140779416643943</string>
    <string name="facebook_status_fmt" />
    <string name="firebase_status_fmt" />
    <string name="label_google_sign_in" />
    <string name="google_status_fmt" />
    <string name="auth_failed" />
    <string name="minimum_password" />
    <string name="signed_out" />


</resources>
